Bug: 554492 Reviewer: Peter Comment: Stop pages from going lower than 1 on profiles folder